--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "ms": "^2.1.3",
     "nodemon": "^2.0.7",
     "wokcommands": "^1.2.1"
