--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/rene-roid/Discord-Starter-Bot#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "hmfull": "^1.2.3",
     "moment": "^2.29.1",
+    "mongoose": "^5.11.15",
     "ms": "^2.1.3",
     "nodemon": "^2.0.7",
     "wokcommands": "^1.2.1"
