--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ms": "^2.1.3",
     "nekos.life": "^2.0.7",
     "nodemon": "^2.0.7",
+    "quickmongo": "^3.0.2",
     "something-random-on-discord": "0.0.2",
     "wokcommands": "^1.2.1"
   }
